# py-linux-info

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/source/: conf.py  index.rst  linux_info.metrics.rst  linux_info.properties.distribution.os_release.rst  linux_info.properties.distribution.rst  linux_info.properties.rst  linux_info.rst  modules.rst
src/linux_info/properties/distribution/: base.py  dto.py  finder.py
src/linux_info/properties/distribution/os_release/: base.py  file.py
tests/: test_distribution.py  test_distribution_dto.py  test_distribution_finder.py  test_os_release.py
tests/fixtures/os-releases/: ubuntu
