[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux_info"
version = "0.0.1"
authors = [
    { name = "Alceu Rodrigues de Freitas Junior", email = "glasswalk3r@yahoo.com.br" },
]
description = "API in Python to recover information about a running Linux OS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/glasswalk3r/py-linux-info"

[tool.pytest.ini_options]
minversion = "6.0"

pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/linux_info"]
